--- a/bank-automat/onnistui.ui
+++ b/bank-automat/onnistui.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>onnistui</class>
+ <widget class="QDialog" name="onnistui">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1584</width>
-    <height>699</height>
+    <width>1490</width>
+    <height>679</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,21 +16,40 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>590</x>
-     <y>220</y>
-     <width>461</width>
-     <height>181</height>
+     <x>440</x>
+     <y>260</y>
+     <width>611</width>
+     <height>121</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Ubuntu</family>
-     <pointsize>72</pointsize>
-     <bold>true</bold>
+     <pointsize>48</pointsize>
     </font>
    </property>
    <property name="text">
-    <string>Onnistui</string>
+    <string>Tapahtuma onnistui!</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="logo">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>171</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: transparent;
+border-image: url(:/poorbanklogo.png);
+background: none;
+border: none;
+background-repeat: none;</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
